a11y color contrast issues and content updates

--- a/about.html
+++ b/about.html
@@ -9,9 +9,8 @@
 
   <title>Mike Kivikoski - Product Designer and Developer</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,600" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="./assets/css/main.css"> -->
+  <!--
+  <link rel="stylesheet" href="./assets/css/main.css"> -->
   <link rel="stylesheet" href="./assets/css/tailwind-output.css">
 
   <!-- <link rel="stylesheet" href="https://tailwindcss.com/assets/build/css/main.css?id=e994f5f9525b4219e81f"> -->
@@ -29,7 +28,7 @@
             <a href="/" class="text-white hover:bg-purple-700 p-2 block mx-1 rounded">Home</a>
             <span class="text-white  p-2 block mx-1 border-b-4 border-purple-700">About</span>
             <a href="/articles.html" class="text-white hover:bg-purple-700 block p-2 mx-1 rounded">Articles</a>
-            <a class="bg-purple-600 hover:bg-purple-700 text-white mb-0 pt-2 pb-1 px-4 rounded" href="mailto:mikekviikoski@gmail.com">Contact Me</a>
+            <a class="bg-purple-600 hover:bg-purple-700 text-white mb-0 pt-2 pb-1 px-4 rounded" href="mailto:mikekviikoski@gmail.com">Email Me</a>
         </nav>
         <button class="flex md:hidden flex-col absolute top-0 right-0 p-4 mt-5">
             <span class="w-5 h-px mb-1 bg-white"></span>
@@ -89,7 +88,7 @@
         <div class="w-1/3 ml-auto mr-auto rounded">
           <p class="bg-gray-200 p-4 text-gray-700">
             Want to chat? I&rsquo;d love to hear from you! Send me an email and we&rsquo;ll setup a Zoom.
-            <a href="mailto:mikekivikoski@gmail.com" title="Email Mike" class="bg-gray-800 hover:bg-purple-700 text-white text-sm py-2 px-2 mt-4 block text-center rounded whitespace-no-wrap">mikekivikoski@gmail.com</a>
+            <a href="mailto:mikekivikoski@gmail.com" title="Email Mike" class="bg-gray-800 hover:bg-purple-700 hover:underline text-white text-sm py-2 px-2 mt-4 block text-center rounded whitespace-no-wrap">mikekivikoski@gmail.com</a>
           </p>
         </div>
     </div>
@@ -126,64 +125,64 @@
 
       <div class="lg:w-1/3 pt-4 md:pt-8 py-8 px-4 md:px-8">
 
-        <h5 class="uppercase text-sm tracking-wide text-gray-600 font-bold">CascadiaJS &mdash; Seattle, WA, Aug 2016</h5>
+        <h5 class="uppercase text-sm tracking-wide text-gray-700 font-bold">CascadiaJS &mdash; Seattle, WA, Aug 2016</h5>
 
         <p class="my-2 text-2xl font-bold text-gray-800">CSS Pseudo</p>
 
         <p class="text-gray-700 mb-4">This talk was part of a 2-day single track conference in Seattle, WA with 300+ in attendance. Learn practical uses for over 35 pseudo-classes and pseudo-elements. Starting with the basics, you&rsquo;ll quickly advance to use cases that apply to positioning, text, content, and get a glimpse at some (hopeful) future selectors.</p>
 
-        <a class="bg-purple-800 hover:bg-purple-700 text-white text-sm py-2 px-2 mb-2 rounded whitespace-no-wrap" href="https://www.youtube.com/watch?v=IMJ3fw4JqPI" title="CSS Pseudo talk, in front of 300+ great people">Watch on YouTube</a>
-        <a class="bg-purple-800 hover:bg-purple-700 text-white text-sm py-2 px-2 mb-2 rounded whitespace-no-wrap" href="https://speakerdeck.com/mkivikoski/css-pseudo" title="View the slides on speakerdeck.com for CSS Pseudo">CSS Pseudo Slides </a>
+        <a class="bg-purple-800 hover:bg-purple-700 hover:underline text-white text-sm py-2 px-2 mb-2 rounded whitespace-no-wrap" href="https://www.youtube.com/watch?v=IMJ3fw4JqPI" title="CSS Pseudo talk, in front of 300+ great people">Watch on YouTube</a>
+        <a class="bg-purple-800 hover:bg-purple-700 hover:underline text-white text-sm py-2 px-2 mb-2 rounded whitespace-no-wrap" href="https://speakerdeck.com/mkivikoski/css-pseudo" title="View the slides on speakerdeck.com for CSS Pseudo">CSS Pseudo Slides </a>
       </div>
 
       <div class="border-t lg:border-0 lg:w-1/3 pt-4 md:pt-8 py-8 px-4 md:px-8">
 
-        <h5 class="uppercase text-sm tracking-wide text-gray-600 font-bold">O&rsquo;Reilly media &mdash; Oct 2014</h5>
+        <h5 class="uppercase text-sm tracking-wide text-gray-700 font-bold">O&rsquo;Reilly media &mdash; Oct 2014</h5>
 
         <p class="my-2 text-2xl font-bold text-gray-800">UI Development for Engineers</p>
 
         <p class="text-gray-700 mb-4">Video series with O&rsquo;Reilly Media that introduces developers to design concepts and front-end development. The course teaches views how to create UI design mockups and then make them real, with production ready markup.</p>
 
-        <a class="bg-purple-800 hover:bg-purple-700 text-white text-sm py-2 px-2 rounded whitespace-no-wrap" href="http://shop.oreilly.com/product/0636920035251.do" title="Visit shop.oreilly.com to purchase">View on O&rsquo;Reilly.com</a>
+        <a class="bg-purple-800 hover:bg-purple-700 hover:underline text-white text-sm py-2 px-2 rounded whitespace-no-wrap" href="http://shop.oreilly.com/product/0636920035251.do" title="Visit shop.oreilly.com to purchase">View on O&rsquo;Reilly.com</a>
       </div>
 
       <div class="border-t lg:border-0 lg:w-1/3 pt-4 md:pt-8 py-8 px-4 md:px-8">
 
-        <h5 class="uppercase text-sm tracking-wide text-gray-600 font-bold">Creative Mornings &mdash; Mar 2012</h5>
+        <h5 class="uppercase text-sm tracking-wide text-gray-700 font-bold">Creative Mornings &mdash; Mar 2012</h5>
 
         <p class="my-2 text-2xl font-bold text-gray-800">Taking the plunge</p>
 
         <p class="text-gray-700 mb-4">This Creative Mornings Boston talk included Highlights, tips, and tricks for folks looking to become self-employed. I discussed processes, myths, and methods that help make a successful transition. Prep work involved, how to mitigate risk, and how to transition successfully; as I learned over the course of my 5 years of running a small consulting business.</p>
 
-        <a class="bg-purple-800 hover:bg-purple-700 text-purple-100 text-sm py-2 px-2 rounded whitespace-no-wrap" href="https://creativemornings.com/talks/mike-kivikoski/1" title="Mike Kivikoski at Creative Mornings, Boston">Watch on YouTube</a>
+        <a class="bg-purple-800 hover:bg-purple-700 hover:underline text-purple-100 text-sm py-2 px-2 rounded whitespace-no-wrap" href="https://creativemornings.com/talks/mike-kivikoski/1" title="Mike Kivikoski at Creative Mornings, Boston">Watch on YouTube</a>
       </div>
 
       <div class="border-t lg:border-0 lg:w-1/3 pt-4 md:pt-8 py-8 px-4 md:px-8">
 
-        <h5 class="uppercase text-sm tracking-wide text-gray-600 font-bold">Cantina Workshop &mdash; Aug 2017</h5>
+        <h5 class="uppercase text-sm tracking-wide text-gray-700 font-bold">Cantina Workshop &mdash; Aug 2017</h5>
 
         <p class="my-2 text-2xl font-bold text-gray-800">Legitimizing Design Thinking in Large Organizations</p>
 
         <p class="text-gray-700 mb-4"></p>
 
-        <a class="bg-purple-800 hover:bg-purple-700 text-purple-100 text-sm py-2 px-2 rounded whitespace-no-wrap" href="https://www.youtube.com/watch?v=Sm_60YPrPzk" title="A workshop from Cantina">Watch on YouTube</a>
+        <a class="bg-purple-800 hover:bg-purple-700 hover:underline text-purple-100 text-sm py-2 px-2 rounded whitespace-no-wrap" href="https://www.youtube.com/watch?v=Sm_60YPrPzk" title="A workshop from Cantina">Watch on YouTube</a>
       </div>
 
       <div class="border-t lg:border-0 lg:w-1/3 pt-4 md:pt-8 py-8 px-4 md:px-8">
 
-        <h5 class="uppercase text-sm tracking-wide text-gray-600 font-bold">BostonCSS &mdash; Jun 2016</h5>
+        <h5 class="uppercase text-sm tracking-wide text-gray-700 font-bold">BostonCSS &mdash; Jun 2016</h5>
 
         <p class="my-2 text-2xl font-bold text-gray-800">CSS Pseudo</p>
 
         <p class="text-gray-700 mb-4">The first edition of my CSS Pseudo talk. This would serve as the trial run for the talk given at CascadiaJS</p>
 
-        <a class="bg-purple-800 hover:bg-purple-700 text-purple-100 text-sm py-2 px-2 rounded whitespace-no-wrap"
+        <a class="bg-purple-800 hover:bg-purple-700 hover:underline text-purple-100 text-sm py-2 px-2 rounded whitespace-no-wrap"
         href="https://www.youtube.com/watch?v=rPDJcQGrKIg" title="The local meetup version of the talk">Watch on YouTube</a>
       </div>
 
       <div class="border-t lg:border-0 lg:w-1/3 pt-4 md:pt-8 py-8 px-4 md:px-8">
 
-        <h5 class="uppercase text-sm tracking-wide text-gray-600 font-bold">NYC Creative Tech Week &mdash; May 2016</h5>
+        <h5 class="uppercase text-sm tracking-wide text-gray-700 font-bold">NYC Creative Tech Week &mdash; May 2016</h5>
 
         <p class="my-2 text-2xl font-bold text-gray-800">Evolving Web Applications with Module Components</p>
 
@@ -193,7 +192,7 @@
 
       <div class="border-t lg:border-0 lg:w-1/3 pt-4 md:pt-8 py-8 px-4 md:px-8">
 
-        <h5 class="uppercase text-sm tracking-wide text-gray-600 font-bold">Great Wide Open &mdash; Mar 2016</h5>
+        <h5 class="uppercase text-sm tracking-wide text-gray-700 font-bold">Great Wide Open &mdash; Mar 2016</h5>
 
         <p class="my-2 text-2xl font-bold text-gray-800">Evolving Web Applications with Module Components</p>
 
@@ -203,20 +202,20 @@
 
       <div class="border-t lg:border-0 lg:w-1/3 pt-4 md:pt-8 py-8 px-4 md:px-8">
 
-        <h5 class="uppercase text-sm tracking-wide text-gray-600 font-bold">Full Stack Toronto &mdash; Nov 2015</h5>
+        <h5 class="uppercase text-sm tracking-wide text-gray-700 font-bold">Full Stack Toronto &mdash; Nov 2015</h5>
 
         <p class="my-2 text-2xl font-bold text-gray-800">Evolving Web Applications with Module Components</p>
 
         <p class="text-gray-700 mb-4"></p>
 
-        <a class="bg-purple-800 hover:bg-purple-700 text-purple-100 text-sm py-2 px-2 rounded whitespace-no-wrap"
+        <a class="bg-purple-800 hover:bg-purple-700 hover:underline text-purple-100 text-sm py-2 px-2 rounded whitespace-no-wrap"
         href="https://www.youtube.com/watch?v=ev3AtyAlwIQ" title="Watch Evolving Web Applications at Full Stack Toronto">Watch on YouTube</a>
       </div>
 
 
       <div class="border-t lg:border-0 lg:w-1/3 pt-4 md:pt-8 py-8 px-4 md:px-8">
 
-        <h5 class="uppercase text-sm tracking-wide text-gray-600 font-bold">HTML5 Developer Conference &mdash; Oct 2015</h5>
+        <h5 class="uppercase text-sm tracking-wide text-gray-700 font-bold">HTML5 Developer Conference &mdash; Oct 2015</h5>
 
         <p class="my-2 text-2xl font-bold text-gray-800">Evolving Web Applications with Module Components</p>
 
@@ -226,7 +225,7 @@
 
       <div class="border-t lg:border-0 lg:w-1/3 pt-4 md:pt-8 py-8 px-4 md:px-8">
 
-        <h5 class="uppercase text-sm tracking-wide text-gray-600 font-bold">Full Stack NH &mdash; Jun 2015</h5>
+        <h5 class="uppercase text-sm tracking-wide text-gray-700 font-bold">Full Stack NH &mdash; Jun 2015</h5>
 
         <p class="my-2 text-2xl font-bold text-gray-800">Design in the browser</p>
 
@@ -237,13 +236,13 @@
 
       <div class="border-t lg:border-0 lg:w-1/3 pt-4 md:pt-8 py-8 px-4 md:px-8">
 
-        <h5 class="uppercase text-sm tracking-wide text-gray-600 font-bold">Boston Ignite &mdash; Apr 2012</h5>
+        <h5 class="uppercase text-sm tracking-wide text-gray-700 font-bold">Boston Ignite &mdash; Apr 2012</h5>
 
         <p class="my-2 text-2xl font-bold text-gray-800">Taking the plunge, quit your job for self employment</p>
 
         <p class="text-gray-700 mb-4">The quick 5 minute lighting talk that highlights the steps to become self employed.</p>
 
-        <a class="bg-purple-800 hover:bg-purple-700 text-purple-100 text-sm py-2 px-2 rounded whitespace-no-wrap"
+        <a class="bg-purple-800 hover:bg-purple-700 hover:underline text-purple-100 text-sm py-2 px-2 rounded whitespace-no-wrap"
         href="https://www.youtube.com/watch?v=VHs7n4xFO4w" title="The quick 5 minute lighting talk">Watch on YouTube</a>
       </div>
 
@@ -260,61 +259,61 @@
       </header>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           User Research
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           User Flows
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           Design Sprints
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           Visual Design
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           Design Systems
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           HTML, CSS / Sass
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           CSS Architecture
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           Accessibility
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           Performance
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           Typography
         </div>
       </div>
@@ -323,7 +322,7 @@
   </div>
 
   <div class="flex my-8">
-    <div class="w-full text-gray-600 hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+    <div class="w-full text-gray-600 hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
       <p>While I work in the front-end/user interface of products, I have experience working within applications written in various languages and frameworks. Including, in no particular order: JavaScript, Node, Angular, Python, PHP, WordPress, Shopify, and Ruby on Rails.</p>
     </div>
   </div>
@@ -332,9 +331,13 @@
 <footer class="bg-gray-400 p-4 mt-8">
   <div class="container flex ml-auto mr-auto text-gray-700 p-4">
     <div class="w-3/5">
-      <p class="mb-4">Mike Kivikoski is a remote Product Designer who solves the difficult problems in enterprise software.
-        This site is built in static HTML, using TailwindCSS, and is hosted via GitHub Pages. Keeping it Simple.</p>
-      <p class="text-sm"><a href="https://github.com/mkivikoski/mkivikoski" title="View this website's git repo" class="text-gray-600 underline hover:no-underline">Issues and PRs welcome, or just look at the history of the site and it&rsquo;s design process.</a></p>
+      <p class="mb-4">Mike Kivikoski is a remote Product Designer that helps teams solve the difficult problems in enterprise software.
+        He works with teams to design and build accessible products in an iterative process. His favorite food is a slice of pepperoni pizza.
+      </p>
+      <p class="text-sm">
+        This site is built in static HTML, using TailwindCSS, and is hosted via GitHub Pages. Keeping it Simple.
+        <a href="https://github.com/mkivikoski/mkivikoski" title="View this website's git repo" class="text-gray-700 underline hover:no-underline">Issues and PRs welcome, or just look at the history of the site and it&rsquo;s design process.</a>
+      </p>
     </div>
 
     <div class="w-1/5 ml-auto">
