--- a/articles.html
+++ b/articles.html
@@ -9,12 +9,9 @@
 
   <title>Mike Kivikoski - Product Designer and Developer</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,600" rel="stylesheet">
   <!-- <link rel="stylesheet" href="./assets/css/main.css"> -->
   <link rel="stylesheet" href="./assets/css/tailwind-output.css">
 
-  <!-- <link rel="stylesheet" href="https://tailwindcss.com/assets/build/css/main.css?id=e994f5f9525b4219e81f"> -->
   <link rel="icon" href="ted-excellent.gif">
 </head>
 
@@ -29,7 +26,7 @@
               <a href="/" class="text-white hover:bg-purple-700 p-2 block mx-1 rounded">Home</a>
               <a href="/about.html" class="text-white hover:bg-purple-700 p-2 block mx-1 rounded">About</a>
               <span class="text-white  p-2 block mx-1 border-b-4 border-purple-700">Articles</span>
-              <a class="bg-purple-600 hover:bg-purple-700 text-white mb-0 pt-2 pb-1 px-4 rounded" href="mailto:mikekviikoski@gmail.com">Contact Me</a>
+              <a class="bg-purple-600 hover:bg-purple-700 text-white mb-0 pt-2 pb-1 px-4 rounded" href="mailto:mikekviikoski@gmail.com">Email Me</a>
           </nav>
           <button class="flex md:hidden flex-col absolute top-0 right-0 p-4 mt-5">
               <span class="w-5 h-px mb-1 bg-white"></span>
@@ -101,9 +98,13 @@
     <footer class="bg-gray-400 p-4 mt-8">
       <div class="container flex ml-auto mr-auto text-gray-700 p-4">
         <div class="w-3/5">
-          <p class="mb-4">Mike Kivikoski is a remote Product Designer who solves the difficult problems in enterprise software.
-            This site is built in static HTML, using TailwindCSS, and is hosted via GitHub Pages. Keeping it Simple.</p>
-          <p class="text-sm"><a href="https://github.com/mkivikoski/mkivikoski" title="View this website's git repo" class="text-gray-600 underline hover:no-underline">Issues and PRs welcome, or just look at the history of the site and it&rsquo;s design process.</a></p>
+          <p class="mb-4">Mike Kivikoski is a remote Product Designer that helps teams solve the difficult problems in enterprise software.
+            He works with teams to design and build accessible products in an iterative process. His favorite food is a slice of pepperoni pizza.
+          </p>
+          <p class="text-sm">
+            This site is built in static HTML, using TailwindCSS, and is hosted via GitHub Pages. Keeping it Simple.
+            <a href="https://github.com/mkivikoski/mkivikoski" title="View this website's git repo" class="text-gray-700 underline hover:no-underline">Issues and PRs welcome, or just look at the history of the site and it&rsquo;s design process.</a>
+          </p>
         </div>
 
         <div class="w-1/5 ml-auto">
