--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 
   <title>Mike Kivikoski - Product Designer and Developer</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,600" rel="stylesheet">
   <!-- <link rel="stylesheet" href="./assets/css/main.css"> -->
   <link rel="stylesheet" href="./assets/css/tailwind-output.css">
 
@@ -47,7 +45,7 @@
             <span class="text-white  p-2 block mx-1 border-b-4 border-purple-700">Home</span>
             <a href="./about.html" class="text-white hover:bg-purple-700 hover:underline  p-2 block mx-1 rounded">About</a>
             <a href="/articles.html" class="text-white hover:bg-purple-700 hover:underline block p-2 mx-1 rounded">Articles</a>
-            <a class="bg-purple-800 hover:bg-purple-600 hover:underline text-white mb-0 pt-2 pb-0 px-4 rounded" href="mailto:mikekviikoski@gmail.com">Contact Me</a>
+            <a class="bg-purple-800 hover:bg-purple-600 hover:underline text-white mb-0 pt-2 pb-0 px-4 rounded" href="mailto:mikekviikoski@gmail.com">Email Me</a>
         </nav>
         <button class="flex md:hidden flex-col absolute top-0 right-0 p-4 mt-5">
             <span class="w-5 h-px mb-1 bg-white"></span>
@@ -70,13 +68,14 @@
 </div>
 
 <div class="container mx-auto -mt-40 px-4">
+  <h5 class="text-sm uppercase mb-1 text-gray-100">Notable work</h5>
 
   <div class="flex sm:flex-wrap items-center mb-4 rounded lg:shadow-lg bg-black">
 
 
     <div class="w-full lg:w-3/5 relative bg-gray-100 p-4 md:p-8 lg:rounded-l order-last lg:order-none">
       <div class="">
-        <p class="uppercase text-sm tracking-wide text-gray-600 font-bold">September, 2019 to March, 2020</p>
+        <p class="uppercase text-sm tracking-wide text-gray-700 font-bold">September, 2019 to March, 2020</p>
         <h3 class="text-1xl md:text-2xl leading-tight my-4 font-black text-gray-800">Bose, an international leader in audio equipment, was creating a platform for Creators to build and share Augmented Reality Audio experiences.</h3>
         <h4 class="text-1xl md:text-2xl leading-snug font-light mb-4 text-gray-700">In an emerging technology, there were a lot of questions on how AR Audio could be used. Bose wanted to solve that.</h4>
         <p class="text-gray-800">Integrating with the existing Bose team, I was brought in to establish design best practices, user testing processes, create accessibility guidelines, and update the visual design to meet modern standards. I helped move feature definition away from hypotheticals, and used user feedback to help grow the AR Creator Tool.</p>
@@ -99,7 +98,7 @@
 
     <div class="w-full lg:w-3/5 relative bg-gray-100 p-4 md:p-8 lg:rounded-r">
       <div class="">
-        <p class="uppercase text-sm tracking-wide text-gray-600 font-bold">April to July, 2019</p>
+        <p class="uppercase text-sm tracking-wide text-gray-700 font-bold">April to July, 2019</p>
         <h3 class="text-1xl md:text-2xl leading-tight my-4 font-black text-gray-800">ezCater, an online marketplace for corporate catering, was growing a new team to handle the entry funnel for new customers &mdash; their landing screens.</h3>
         <h4 class="text-1xl md:text-2xl leading-snug font-light mb-4 text-gray-700">The rapidly-expanding company, valued at over $1.25b, was invested in understanding and presenting the correct content to users searching for business catering. </h4>
         <p class="text-gray-800">ezCater reached out to Cantina to optimize this customer experience on mobile, tablet, and desktop. Using A/B testing, prototyping, component-based design, fast iterations, and metric definitions, I defined and lead the user experience work and user interface design of their landing screen types.</p>
@@ -118,7 +117,7 @@
           <img src="case-study/taskrabbit/images/taskrabbit-logo.svg" alt="task rabbit logo" class="ml-auto mr-auto w-1/2" />
         </div>
         <div class="ml-auto bg-gray-100 p-4 md:p-8 rounded-b relative">
-          <p class="uppercase text-sm tracking-wide text-gray-600 font-bold">January to March, 2010</p>
+          <p class="uppercase text-sm tracking-wide text-gray-700 font-bold">January to March, 2010</p>
           <h3 class="text-1xl md:text-2xl leading-tight my-4 font-black text-gray-800">A decade ago, I helped streamline TaskRabbit&rsquo;s checkout flow as they transitioned from small startup to nationally recognized product.</h3>
           <h4 class="text-1xl md:text-2xl leading-snug font-light mb-4 text-gray-700">Before TaskRabbit was nationally known, they were a small startup named RunMyErrand, preparing for a big change.</h4>
           <p class="text-gray-800">Using research, interviews, and testing: I helped reduce task postings from 6 screens down to a single screen &mdash; reducing posting time from several minutes to <90 seconds.</p>
@@ -133,7 +132,7 @@
           <img src="case-study/healthcaresource/images/hcs-logo.svg" alt="HealthCareSource logo" class="ml-auto mr-auto w-1/2" />
         </div>
         <div class="ml-auto bg-gray-100 p-4 md:p-8 rounded-b relative">
-          <p class="uppercase text-sm tracking-wide text-gray-600 font-bold">October, 2018 to March, 2019</p>
+          <p class="uppercase text-sm tracking-wide text-gray-700 font-bold">October, 2018 to March, 2019</p>
           <h3 class="text-1xl md:text-2xl leading-tight my-4 font-black text-gray-800">HealthCareSource, a multi-million dollar healthcare recruiting company, wanted to create a new standard for digital tools in their industry.</h3>
           <h4 class="text-1xl md:text-2xl leading-snug font-light mb-4 text-gray-700">This large enterprise wanted to create an easier and more efficient process for recruiting healthcare professionals.</h4>
           <p class="text-gray-800">I led the visual design portion of the ideation, research and design of this greenfield application. Using interviews, prototyping and fast iterations, we created a streamlined and efficient prototype.</p>
@@ -146,7 +145,7 @@
   </div>
 
   <div class="mb-4">
-    <p class="text-sm text-gray-400 text-center">Due to the nature of consulting work, not all work is available for the public.</p>
+    <p class="text-sm text-gray-700 text-center">Due to the nature of consulting work, not all work is available for the public.</p>
   </div>
 
 
@@ -163,7 +162,7 @@
         I am proficient with <b>Problem Identification</b>, <b>User Research, Interviews &amp; Testing</b>, and <b>UX Flows</b>. The depth of my knowledge and skills are in <b>Visual Design</b>, <b>UI Development</b> and <b>Code Integration</b>.</p>
 
       <div class="">
-        <a href="/about.html" title="Learn more about Mike Kivikoski" class="bg-purple-800 hover:bg-purple-700 text-white text-sm py-2 px-4 rounded whitespace-no-wrap">Learn more about me</a>
+        <a href="/about.html" title="Learn more about Mike Kivikoski" class="bg-purple-800 hover:bg-purple-700 hover:underline text-white text-sm py-2 px-4 rounded whitespace-no-wrap">Learn more about me</a>
       </div>
     </div>
   </div>
@@ -176,40 +175,40 @@
 
       <div class="lg:w-1/3 pt-4 md:pt-8 py-8 px-4 md:px-8">
 
-        <h5 class="uppercase text-sm tracking-wide text-gray-600 font-bold">CascadiaJS &mdash; Seattle, WA, Aug 2016</h5>
+        <h5 class="uppercase text-sm tracking-wide text-gray-700 font-bold">CascadiaJS &mdash; Seattle, WA, Aug 2016</h5>
 
         <p class="my-2 text-2xl font-bold text-gray-800">CSS Pseudo</p>
 
         <p class="text-gray-700 mb-4">This talk was part of a 2-day single track conference in Seattle, WA with 300+ in attendance. Learn practical uses for over 35 pseudo-classes and pseudo-elements. Starting with the basics, you&rsquo;ll quickly advance to use cases that apply to positioning, text, content, and get a glimpse at some (hopeful) future selectors.</p>
 
-        <a class="bg-purple-800 hover:bg-purple-700 text-white text-sm py-2 px-2 mb-2 rounded whitespace-no-wrap" href="https://www.youtube.com/watch?v=IMJ3fw4JqPI" title="CSS Pseudo talk, in front of 300+ great people">Watch on YouTube</a>
-        <a class="bg-purple-800 hover:bg-purple-700 text-white text-sm py-2 px-2 mb-2 rounded whitespace-no-wrap" href="https://speakerdeck.com/mkivikoski/css-pseudo" title="View the slides on speakerdeck.com for CSS Pseudo">CSS Pseudo Slides </a>
+        <a class="bg-purple-800 hover:bg-purple-700 hover:underline text-white text-sm py-2 px-2 mb-2 rounded whitespace-no-wrap" href="https://www.youtube.com/watch?v=IMJ3fw4JqPI" title="CSS Pseudo talk, in front of 300+ great people">Watch on YouTube</a>
+        <a class="bg-purple-800 hover:bg-purple-700 hover:underline text-white text-sm py-2 px-2 mb-2 rounded whitespace-no-wrap" href="https://speakerdeck.com/mkivikoski/css-pseudo" title="View the slides on speakerdeck.com for CSS Pseudo">CSS Pseudo Slides </a>
       </div>
 
       <div class="border-t lg:border-0 lg:w-1/3 pt-4 md:pt-8 py-8 px-4 md:px-8">
 
-        <h5 class="uppercase text-sm tracking-wide text-gray-600 font-bold">O&rsquo;Reilly media &mdash; Oct 2014</h5>
+        <h5 class="uppercase text-sm tracking-wide text-gray-700 font-bold">O&rsquo;Reilly media &mdash; Oct 2014</h5>
 
         <p class="my-2 text-2xl font-bold text-gray-800">UI Development for Engineers</p>
 
         <p class="text-gray-700 mb-4">Video series with O&rsquo;Reilly Media that introduces developers to design concepts and front-end development. The course teaches views how to create UI design mockups and then make them real, with production ready markup.</p>
 
-        <a class="bg-purple-800 hover:bg-purple-700 text-white text-sm py-2 px-2 rounded whitespace-no-wrap" href="http://shop.oreilly.com/product/0636920035251.do" title="Visit shop.oreilly.com to purchase">View on O&rsquo;Reilly.com</a>
+        <a class="bg-purple-800 hover:bg-purple-700 hover:underline text-white text-sm py-2 px-2 rounded whitespace-no-wrap" href="http://shop.oreilly.com/product/0636920035251.do" title="Visit shop.oreilly.com to purchase">View on O&rsquo;Reilly.com</a>
       </div>
 
       <div class="border-t lg:border-0 lg:w-1/3 pt-4 md:pt-8 py-8 px-4 md:px-8">
 
-        <h5 class="uppercase text-sm tracking-wide text-gray-600 font-bold">Creative Mornings &mdash; Mar 2012</h5>
+        <h5 class="uppercase text-sm tracking-wide text-gray-700 font-bold">Creative Mornings &mdash; Mar 2012</h5>
 
         <p class="my-2 text-2xl font-bold text-gray-800">Taking the plunge</p>
 
         <p class="text-gray-700 mb-4">This Creative Mornings Boston talk included Highlights, tips, and tricks for folks looking to become self-employed. I discussed processes, myths, and methods that help make a successful transition. Prep work involved, how to mitigate risk, and how to transition successfully; as I learned over the course of my 5 years of running a small consulting business.</p>
 
-        <a class="bg-purple-800 hover:bg-purple-700 text-purple-100 text-sm py-2 px-2 rounded whitespace-no-wrap" href="https://creativemornings.com/talks/mike-kivikoski/1" title="Mike Kivikoski at Creative Mornings, Boston">Watch on YouTube</a>
+        <a class="bg-purple-800 hover:bg-purple-700 hover:underline text-purple-100 text-sm py-2 px-2 rounded whitespace-no-wrap" href="https://creativemornings.com/talks/mike-kivikoski/1" title="Mike Kivikoski at Creative Mornings, Boston">Watch on YouTube</a>
       </div>
 
       <div class="w-full bg-gray-100 rounded-b p-2">
-        <a href="/about.html#talks" class="bg-gray-500 hover:bg-purple-700 text-white text-sm py-2 px-4 rounded md:float-right whitespace-no-wrap" title="View a list of all of Mike's previous talks">View more talks</a>
+        <a href="/about.html#talks" class="bg-purple-800 hover:bg-purple-700 hover:underline text-white text-sm py-2 px-4 rounded md:float-right whitespace-no-wrap" title="View a list of all of Mike's previous talks">View more talks</a>
       </div>
 
     </div>
@@ -224,61 +223,61 @@
       </header>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           User Research
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           User Flows
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           Design Sprints
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           Visual Design
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           Design Systems
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           HTML, CSS / Sass
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           CSS Architecture
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           Accessibility
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           Performance
         </div>
       </div>
 
       <div class="w-full sm:w-1/2 lg:w-1/5 mb-4 px-2">
-        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4">
+        <div class="hover:bg-white bg-gray-100 border-l-4 border-gray-400 hover:shadow-lg rounded p-4 text-gray-800">
           Typography
         </div>
       </div>
@@ -292,9 +291,13 @@
 <footer class="bg-gray-400 p-4 mt-8">
   <div class="container flex ml-auto mr-auto text-gray-700 p-4">
     <div class="w-3/5">
-      <p class="mb-4">Mike Kivikoski is a remote Product Designer who solves the difficult problems in enterprise software.
-        This site is built in static HTML, using TailwindCSS, and is hosted via GitHub Pages. Keeping it Simple.</p>
-      <p class="text-sm"><a href="https://github.com/mkivikoski/mkivikoski" title="View this website's git repo" class="text-gray-600 underline hover:no-underline">Issues and PRs welcome, or just look at the history of the site and it&rsquo;s design process.</a></p>
+      <p class="mb-4">Mike Kivikoski is a remote Product Designer that helps teams solve the difficult problems in enterprise software.
+        He works with teams to design and build accessible products in an iterative process. His favorite food is a slice of pepperoni pizza. 
+      </p>
+      <p class="text-sm">
+        This site is built in static HTML, using TailwindCSS, and is hosted via GitHub Pages. Keeping it Simple.
+        <a href="https://github.com/mkivikoski/mkivikoski" title="View this website's git repo" class="text-gray-700 underline hover:no-underline">Issues and PRs welcome, or just look at the history of the site and it&rsquo;s design process.</a>
+      </p>
     </div>
 
     <div class="w-1/5 ml-auto">
