content and bg color fixes

--- a/articles.html
+++ b/articles.html
@@ -5,11 +5,10 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Mike Kivikoski is a Product Design and Developer working on accessible, responsive websites and applications.">
+  <meta name="description" content="Mike Kivikoski is a Product Designer and Developer working on accessible, responsive websites and applications.">
 
   <title>Mike Kivikoski - Product Designer and Developer</title>
 
-  <!-- <link rel="stylesheet" href="./assets/css/main.css"> -->
   <link rel="stylesheet" href="./assets/css/tailwind-output.css">
 
   <link rel="icon" href="ted-excellent.gif">
@@ -18,7 +17,7 @@
 <body class="bg-gray-200">
 
   <div class="bg-purple-600 pb-3">
-    <header class="bg-purple-800">
+    <header>
       <div class="container mx-auto px-4 ">
         <div class="flex flex-col sm:flex-row items-center justify-between py-6 relative">
           <h3 class="text-2xl font-bold uppercase text-white"><a href="/" title="Go back to home screen">Mike Kivikoski</a></h3>
