--- a/index.html
+++ b/index.html
@@ -5,39 +5,21 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Mike Kivikoski is a Product Design and Developer working on accessible, responsive websites and applications.">
+  <meta name="description" content="Mike Kivikoski is a Product Designer and Developer working on accessible, responsive websites and applications.">
 
   <title>Mike Kivikoski - Product Designer and Developer</title>
 
-  <!-- <link rel="stylesheet" href="./assets/css/main.css"> -->
   <link rel="stylesheet" href="./assets/css/tailwind-output.css">
 
-  <!-- <link rel="stylesheet" href="https://tailwindcss.com/assets/build/css/main.css?id=e994f5f9525b4219e81f"> -->
   <link rel="icon" href="ted-excellent.gif">
 
-  <style>
-    .videoWrapper {
-      	position: relative;
-      	padding-bottom: 56.25%; /* 16:9 */
-      	padding-top: 25px;
-      	height: 0;
-        max-height: 400px;
-      }
-      .videoWrapper iframe {
-      	position: absolute;
-      	top: 0;
-      	left: 0;
-      	width: 100%;
-      	height: 100%;
-      }
-  </style>
 </head>
 
 
 <body class="bg-gray-200">
 
 <div class="bg-purple-600 pb-40">
-  <header class="">
+  <header>
     <div class="container mx-auto px-4 ">
       <div class="flex flex-col sm:flex-row items-center justify-between py-6 relative">
         <h3 class="text-2xl font-bold uppercase text-white"><a href="/" title="Go back to home screen">Mike Kivikoski</a></h3>
@@ -60,7 +42,7 @@
 
     <div class="flex mb-2 md:mb-4 py-4 md:py-8 lg:py-12">
       <div class="w-full">
-        <h1 class="text-2xl md:text-4xl lg:text-5xl xl:text-6xl font-extrabold lg:font-black leading-tight tracking-wide text-white">I help teams solve the difficult problems in Enterprise products.</h1>
+        <h1 class="text-2xl md:text-4xl lg:text-5xl xl:text-6xl font-extrabold lg:font-black leading-tight tracking-wide text-white">I help teams solve difficult problems in Enterprise products.</h1>
       </div>
     </div>
 
@@ -292,7 +274,7 @@
   <div class="container flex ml-auto mr-auto text-gray-700 p-4">
     <div class="w-3/5">
       <p class="mb-4">Mike Kivikoski is a remote Product Designer that helps teams solve the difficult problems in enterprise software.
-        He works with teams to design and build accessible products in an iterative process. His favorite food is a slice of pepperoni pizza. 
+        He works with teams to design and build accessible products in an iterative process. His favorite food is a slice of pepperoni pizza.
       </p>
       <p class="text-sm">
         This site is built in static HTML, using TailwindCSS, and is hosted via GitHub Pages. Keeping it Simple.
