Update about.html to reflect current work position

--- a/about.html
+++ b/about.html
@@ -66,11 +66,11 @@
 
         <div class="w-1/2 ">
           <p class="mb-2">
-            I am currently a Senior Designer at <a href="https://cantina.co/" title="Cantina, a digital consulting agency in Boston">Cantina</a>, a digital consulting agency in Boston, MA; but I live in New Hampshire and work remotely. Slack, Zoom, and Gmail are everyday tools, along with gifs, puns and emojis. 🤗  I&rsquo;ve got private office space in our house and use a Jarvis standing desk daily, paired with a 27" monitor and Cheeseburger, the 2 year old Great Dane/Lab mix.
+            I am currently a Product Design Lead at Liberty Mutual, working on the Developer Experience. I live in New Hampshire and work remotely. Slack, Zoom, and Gmail are everyday tools, along with gifs, puns and emojis. 🤗 I&rsquo;ve got private office space in our house and use a Jarvis standing desk daily, paired with two 27" monitors and Cheeseburger, our Great Dane/Lab mix.
           </p>
 
           <p class="mb-2">
-             Prior to Cantina, I spent 5 years running my own consulting studio, Atedrake, out of a collective workspace in Somerville, MA. Projects ranged from UX and Visual Design, to static UI, WordPress and Shopify development. Clients consisted of small local businesses, and larger agencies needing assistance with their clients.
+             Prior to Liberty Mutual, I worked as a Senior Designer at <a href="https://cantina.co/" title="Cantina, a digital consulting agency in Boston">Cantina</a>, a digital consulting agency in Boston, MA for 6 years. I spent 5 years running my own consulting studio, Atedrake, out of a collective workspace in Somerville, MA. Projects ranged from UX and Visual Design, to static UI, WordPress and Shopify development. Clients consisted of small local businesses, and larger agencies needing assistance with their clients.
           </p>
           <p class="mb-2">
             At the end of 2014, I had the opportunity to create an instructional video with O&rsquo;Reilly Media, &ldquo;<a href="http://shop.oreilly.com/product/0636920035251.do" title="View the video order page at shop.oreilly.com">UI Development for Engineers</a>&rdquo;, that gives an introduction and overview to design and front-end development to developers unfamiliar with those concepts.
@@ -102,14 +102,6 @@
     </div>
 
 
-        <!-- I helped create and build <a href="https://participant.empower-retirement.com/participant/#/login" title="Empower, 401k Retirement plan">Empower&rsquo;s</a> user interface and accessibility updates.
-        I designed <a href="https://www.connection.com/" title="Connection, a physical product IT company">Connection&rsquo;s</a> checkout flow using user interviews, flows and interactive prototypes.
-        I designed and built <a href="https://www.taskrabbit.com/" title="TaskRabbit, an online marketplace for local labor">TaskRabbit&rsquo;s</a> task creation form, with data from user interviews and tests, when they transitioned from RunMyErrand and were prepping for San Francisco.
-        I built several high-fidelity prototypes for processing and registering new users for the <a href="https://www.goinvo.com/enterprise/dnc/" title="Involution Studios case study on the DNC project"> Democratic National Committee</a>.
-        I developed the responsive experience for <a href="https://www.quoddy.com/" title="Quoddy, a custom shoemaker in Maine">Quoddy</a> on Shopify, and created the
-        responsive redesign built on WordPress for <a href="https://www.centralsquaretheater.org/" title="CST is a small theater located in Cambridge, MA">Central Square Theater</a>.</p>
-
-      <h4>Due to the nature of my consulting work, I&rsquo;m not able to post a lot of work publicly.<br />A portfolio is available upon request.</h4> -->
 
 
 
