update years of experience and GH link in footer

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
       <h3 class="text-1xl md:text-2xl leading-tight font-semibold text-gray-800 mb-4 w-5/6">I&rsquo;ve been fortunate enough to work on projects with budgets in the seven figures, speak at conferences around the States, and have had my work shipped to literally millions of users.</h3>
 
-      <p class="mb-6">With over twelve years of professional software experience, and a Bachelor of Fine Arts in design, I solve difficult problems in Enterprise level software.
+      <p class="mb-6">With over fourteen years of professional software experience, and a Bachelor of Fine Arts in design, I solve difficult problems in Enterprise level software.
         I am proficient with <b>Problem Identification</b>, <b>User Research, Interviews &amp; Testing</b>, and <b>UX Flows</b>. The depth of my knowledge and skills are in <b>Visual Design</b>, <b>UI Development</b> and <b>Code Integration</b>.</p>
 
       <div class="">
@@ -278,7 +278,7 @@
       </p>
       <p class="text-sm">
         This site is built in static HTML, using TailwindCSS, and is hosted via GitHub Pages. Keeping it Simple.
-        <a href="https://github.com/mkivikoski/mkivikoski" title="View this website's git repo" class="text-gray-700 underline hover:no-underline">Issues and PRs welcome, or just look at the history of the site and it&rsquo;s design process.</a>
+        <a href="https://github.com/mkivikoski/mikekivikoski" title="View this website's git repo" class="text-gray-700 underline hover:no-underline">Issues and PRs welcome, or just look at the history of the site and it&rsquo;s design process.</a>
       </p>
     </div>
 
